--- a/styles/styles.css
+++ b/styles/styles.css
@@ -16,7 +16,7 @@ body {
     border-radius: 20px;
     background-color: white;
     max-width: 320px;
-    margin: 4rem auto;
+    margin: 5.75rem auto 0;
     padding: 1rem;
 }
 
