--- a/styles/styles.css
+++ b/styles/styles.css
@@ -48,7 +48,7 @@ p {
 @media screen and (max-width: 767px) {
     .container {
         max-width: 360px;
-        margin: 2.5rem auto;
+        margin: 5.5rem auto 0;
         padding: 1.5rem;
     }
 
